--- a/CodeCamp/HTML/Profile.html
+++ b/CodeCamp/HTML/Profile.html
@@ -14,8 +14,10 @@
     <li><a class="active" href="Profile.html">Profile</a></li>
     <li><a href="#contact">Contact</a></li>
     <li style="float:right"><a href="#about">About</a></li>
-  </ul>     
-
+  </ul>  
+  
+  
+  <img href="https://github.com/NuttakritChulabha/CodeCamp5/blob/master/CodeCamp/other/nuttakrit.jpg" alt="Paris" width="300" height="300">
 
 <div class="text-white">
 
