--- a/CodeCamp/HTML/indexWeb.html
+++ b/CodeCamp/HTML/indexWeb.html
@@ -7,14 +7,13 @@
     <title>My index & Link</title>
 </head>
 
-<body class="background">
+<body>
  
-  <ul>
-    <li><a class="active" href="indexWeb.html">Home</a></li>
-    <li><a href="Profile.html">Profile</a></li>
-    <li><a href="#contact">Contact</a></li>
-    <li style="float:right"><a href="#about">About</a></li>
-  </ul>     
+  <div class="topnav">
+    <a href="indexWeb.html">Home</a>
+    <a href="Profile.html">Profile</a>
+    <a href="Contact.html">Contact</a>
+  </div>    
 
   <div class="text-white">
     
