--- a/Profile.html
+++ b/Profile.html
@@ -101,7 +101,7 @@
                 <div class="content-2">
                   <h2>2561</h2>
                   <hr>
-                    <p><img src="http://www.tmichain.com/images/logo.png" alt="tmichain" width="400" class="img-align" ></p>
+                    <p><img src="logoIMC.png" alt="tmichain" width="400" class="img-align" ></p>
                     <p><b>ตำแหน่งงาน :</b> หัวหน้าฝ่ายประกันคุณภาพ</p>
                     <p><b>ระยะเวลา :</b> มกราคม&nbsp;2561&nbsp;<span>ถึง</span>มิถุนายน&nbsp;2561</p>
                     <p><b>เงินเดือน(บาท)</b> : 19,000 บาท</p>
@@ -122,7 +122,7 @@
                 <div class="content-2">
                     <h2>2560</h2>
                     <hr>        
-                    <p><img src="http://www.tmichain.com/images/logo.png" alt="tmichain" width="400" class="img-align" ></p>
+                    <p><img src="logoIMC.png" alt="tmichain" width="400" class="img-align" ></p>
                     <p><b>ตำแหน่งงาน :</b>นักศึกษาสหกิจ</p>
                     <p><b>ระยะเวลา :</b> มิถุนายน&nbsp;2560&nbsp;<span>ถึง</span>ธันวาคม&nbsp;2560</p>
                     <p><b>เงินเดือน(บาท)</b> : 9,000 บาท</p>
