--- a/CodeCamp/Basic JS/Javascript basic Part II/แบบฝึกหัดขั้นสูง 14.html
+++ b/CodeCamp/Basic JS/Javascript basic Part II/แบบฝึกหัดขั้นสูง 14.html
@@ -12,9 +12,9 @@
                 let sum="";
                 for(j=1;j<=n;j++){
                     if(i<j){
-                        sum = sum +"-"
+                        sum = sum +"-";
                     }else{
-                        sum = sum +"*"
+                        sum = sum +"*";
                     }
                 }  
                 console.log(sum);
