--- a/CodeCamp/Basic JS/Javascript basic Part II/แบบฝึกหัดขั้นสูง 18.html
+++ b/CodeCamp/Basic JS/Javascript basic Part II/แบบฝึกหัดขั้นสูง 18.html
@@ -12,9 +12,9 @@
                 let sum="";
                 for(j=n;j>=1;j--){
                     if(i>=j){
-                        sum = sum +"*"
+                        sum = sum +"*";
                     }else{
-                        sum = sum +"-"
+                        sum = sum +"-";
                     }
                 }  
                 console.log(sum);
