--- a/CodeCamp/Basic JS/Javascript basic Part II/แบบฝึกหัดขั้นสูง 19.html
+++ b/CodeCamp/Basic JS/Javascript basic Part II/แบบฝึกหัดขั้นสูง 19.html
@@ -14,9 +14,9 @@
                 let sum="";
                 for(j=n;j>=1;j--){
                     if(i>=j){
-                        sum = sum +"*"
+                        sum = sum +"*";
                     }else{
-                        sum = sum +"-"
+                        sum = sum +"-";
                     }
                 }  
                 console.log(sum);
@@ -25,9 +25,9 @@
                 let sum="";
                 for(j=n;j>=1;j--){
                     if(i>=j){
-                        sum = sum +"*"
+                        sum = sum +"*";
                     }else{
-                        sum = sum +"-"
+                        sum = sum +"-";
                     }
                 }  
                 console.log(sum);
